--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,28 @@ body {
   background:radial-gradient(rgb(162, 192, 193), #70AAE0);
   background: -webkit-radial-gradient(rgb(162, 192, 193), #70AAE0);
   text-align: center;
-}
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  width: 100%;
+  height: 100%; 
+}
+
+/* LOGO */
+header {
+	margin: 0 auto;
+	height: 100px;
+}
+header img {
+	height: 300px;
+	margin: 0 auto;
+}
+/* github */
+#github{
+	position: absolute;
+	top: 20px;
+	left:20px;
+	font-size: 23px;
+	color: black;
+}
+#github span {
+	font-size: 15px;
 }
