--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,50 @@
-html,
+
 body {
   font-family: 'Permanent Marker', cursive;
   font-size: 24px;
-  background:radial-gradient(rgb(162, 192, 193), #70AAE0);
-  background: -webkit-radial-gradient(rgb(162, 192, 193), #70AAE0);
   text-align: center;
   min-height: 100%;
   width: 100%;
   height: 100%; 
+  
+  background-color: rgb(162, 192, 193);
+  transition: all 0.5s ease;
 }
-
+#main-section {
+	text-align: center;
+}
 /* LOGO */
 header {
-	margin: 20px auto;
+	margin: 0 auto;
 	height: 100px;
 }
 header img {
 	height: 300px;
 	margin: 0 auto;
 }
-/* github */
+/* github button */
 #github{
 	position: absolute;
 	top: 20px;
-	left:20px;
+	left: 20px;
 	font-size: 23px;
 	color: black;
 }
 #github span {
 	font-size: 15px;
 }
-#main-section h3 {
-	clear: none;
+
+#city-title {
+	font-size: 34px;
+	padding: 30px;
+}
+
+.rain {
+  background: radial-gradient(#2196F3, #1C2261);
+  background: -webkit-radial-gradient(#2196F3, #1C2261);
+  color:yellow;
+}
+.clouds {
+  background:radial-gradient(rgb(160, 160, 160), #424242);
+  background: -webkit-radial-gradient(rgb(160, 160, 160), #424242);
 }
