--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,15 @@
 }
 html, body {
 	font-family: 'Permanent Marker', cursive;
-	font-size: 24px;
+	font-size: 36px;
 }
 body {
-	text-align: center;
-	min-height: 100%;
-	min-width: 100%;
-
-	background-color: rgb(162, 192, 193);
-
+	height: calc(100vh);
+	width: calc(100vw);
+	background-color: gray;
+}
+#github {
+	padding: 0.2rem;
 }
 #content-wrapper {
 	display: flex;
@@ -20,22 +20,54 @@ body {
 	align-content: center;
 	flex-direction: column;
 	flex-wrap: nowrap;
+	text-align: center;
+}
+#logo {
+	align-self: center;
+}
+
+/*~~~~~~CLEAR*/
+.clear {
+	background-color: darkorange;
+	color: black;	
 }
 #clear .fa {
 	font-size: 200px;
 }
 
-
+/*~~~~~~RAIN*/
 .rain {
-	background: radial-gradient(rgb(100, 140, 169), #1C2261);
-	background: -webkit-radial-gradient(rgb(100, 140, 169), #1C2261);
-	color:yellow;
+	background-color: cadetblue;
+	color:black;
 }
+/*rain cloud*/
+#rain .fa-cloud {
+	position: absolute;
+	margin-left: -23px;
+}
+@media (max-width: 1970px) {
+	#rain .fa-cloud {
+	}
+}
+#rain .fa-tint {
+	margin: 1rem auto;
+	color: cornflowerblue;
+	text-shadow: 1px 2px 0 black;
+}
+#rain .fa-tint {
+	position: relative;
+}
+
+
+
+/*~~~~~~~CLOUDS*/
 .clouds {
-	background:radial-gradient(rgb(113, 113, 113), #424242);
-	background: -webkit-radial-gradient(rgb(113, 113, 113), #424242);
-	color: rgb(51, 66, 111); 
+	background-color: gray;
+	color: white;  
 }
-.clear {
-	
+
+/*~~~~~~~~SNOW*/
+.snow {
+	background-color: slategray;
+	color: deepskyblue;
 }
